# learn_celue

./: .gitignore  README.md  celue_10tokens.py  celue_simple1.py  config.py  fetch_save_price.py  font.py  pyproject.toml  trade-sample.py
backtest_data/: all_tokens_change.csv  back_test_10tokens.csv  back_test_celue1.csv  back_test_celue1_youhua.csv  btc_eth_price_change.csv
celue/: celue_simple1.py  celue_simple1_youhua.py
trade/: trade-sample.py
